# mft_muncher

./: Cargo.toml  init.vim  readme.md
src/: file_record.rs  filerecord.rs  fstree.rs  lib.rs  main.rs  mft.rs  ntfs_attributes.rs  ntfs_utils.rs  ntfs_volume_data.rs  readme.md  scratch_unsafe_winapi_functions.rs  todo.md  unsafe_winapi_functions.rs  usn_record.rs  utils.rs  winapi_ffi.rs  zipper.rs
src/ntfs_attributes/: data.rs  index_allocation.rs  index_root.rs  ntfs_attribute_list.rs  ntfs_data.rs  ntfs_file_name.rs  ntfs_reparse_point.rs  ntfs_standard_attribute.rs  ntfs_standard_information.rs  reparse_point.rs  standard_information.rs
