[package]
name = "mft_muncher"
version = "0.1.0"
authors = ["Luke Arntz <luke@blue42.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3", features = ["winerror","timezoneapi","ioapiset","winioctl","winuser", "fileapi", "winnt", "handleapi", "errhandlingapi", "securitybaseapi", "processthreadsapi", "winbase"] }
chrono = "0.4"